--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -6,7 +6,7 @@
     class="icc-tile-list"
     cdkDropListGroup
     [ngStyle]="{
-      'grid-gap': gridGap + 'px',
+      'grid-gap': config.gridGap + 'px',
       'grid-template-columns': gridTemplateColumns,
       'grid-template-rows': gridTemplateRows,
     }"
