--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -1,21 +1,10 @@
-<icc-layout *ngIf="dashboardConfig$ | async as config">
+<icc-layout *ngIf="config$ | async as config">
   <icc-layout-header title="ICC.UI.TITLE.DASHBOARD" [buttons]="buttons" (iccButtonClick)="buttonClick($event)">
   </icc-layout-header>
 
-  <ng-container *ngIf="dashboardSetting$ | async as dashboardSetting">
+  <ng-container *ngIf="setting$ | async as setting">
     <div *ngIf="tiles$ | async as tiles" cdkDropListGroup>
-      <icc-tiles
-        [ngStyle]="{
-          'grid-gap': config.gridGap + 'px',
-          'grid-template-columns': gridTemplateColumns,
-          'grid-template-rows': gridTemplateRows,
-        }"
-        [config]="config"
-        [dashboardSetting]="dashboardSetting"
-        [tiles]="tiles"
-        [options]="options"
-      >
-      </icc-tiles>
+      <icc-tiles [config]="config" [setting]="setting" [tiles]="tiles" [options]="options"> </icc-tiles>
     </div>
   </ng-container>
 </icc-layout>
