--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -21,7 +21,7 @@
         <cdk-drop-list
           class="icc-drag-tile"
           [cdkDropListData]="i"
-          (cdkDropListDropped)="onDropListDropped($event, tile, tiles)"
+          (cdkDropListDropped)="onDropListDropped($event, tile, tiles, setting)"
         >
           <div
             class="icc-drag-tile"
@@ -57,56 +57,56 @@
           iccResize
           [direction]="resizeType.TOP"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeRight
           iccResize
           [direction]="resizeType.RIGHT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeBottom
           iccResize
           [direction]="resizeType.BOTTOM"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeLeft
           iccResize
           [direction]="resizeType.LEFT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeTopLeft
           iccResize
           [direction]="resizeType.TOP_LEFT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeTopRight
           iccResize
           [direction]="resizeType.TOP_RIGHT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeBottomRight
           iccResize
           [direction]="resizeType.BOTTOM_RIGHT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
         <div
           IccResizeBottomLeft
           iccResize
           [direction]="resizeType.BOTTOM_LEFT"
           [elementKey]="'tile' + i"
-          (iccResizeEvent)="onResizeTile($event, tile, tiles)"
+          (iccResizeEvent)="onResizeTile($event, tile, tiles, setting)"
         ></div>
       </div>
     </div>
