--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -1,4 +1,4 @@
-@for (item of items; track $index; let index = $index) {
+@for (item of itemList(); track $index; let index = $index) {
   <icc-layout [ngStyle]="{ flex: getHeaderStyle(item) }">
     <icc-layout-header
       [ngClass]="item.expanded ? 'icc-accordion-item-expanded' : ''"
