--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -1,34 +1,31 @@
-<ng-container *ngIf="tabsConfig$ | async as tabsConfig">
-  <ng-container *ngIf="tabsSetting$ | async as tabsSetting">
-    <icc-tab-group
-      *ngIf="tabsTabs$ | async as tabs"
-      cdkDropList
-      cdkDropListOrientation="horizontal"
-      (cdkDropListDropped)="drop($event)"
-      cdkDropListElementContainer=".icc-mdc-tab-labels"
-      class="icc-drag-tabs"
-      [selectedIndex]="tabsConfig.selectedTabIndex"
-      animationDuration="0"
-      (selectedIndexChange)="onSelectedIndexChange($event)"
-      [icc-align-tabs]="tabsConfig.alignTabs"
-    >
-      @for (tab of tabs; track $index; let index = $index) {
-        <icc-tab [disabled]="tab.disabled">
-          <ng-template icc-tab-label>
-            <icc-tabs-tab
-              [tabsConfig]="tabsConfig"
-              [tabsSetting]="tabsSetting"
-              [tabs]="tabs"
-              [tab]="tab"
-              [index]="index"
-            >
-            </icc-tabs-tab>
-          </ng-template>
-          @if (index === tabsConfig.selectedTabIndex && !tab.disabled) {
-            <icc-portal [content]="tab.content!" [context]="tab.context!"></icc-portal>
-          }
-        </icc-tab>
-      }
-    </icc-tab-group>
-  </ng-container>
-</ng-container>
+@if (tabsConfig$() && tabsSetting$() && tabsTabs$()) {
+  <icc-tab-group
+    cdkDropList
+    cdkDropListOrientation="horizontal"
+    (cdkDropListDropped)="drop($event)"
+    cdkDropListElementContainer=".icc-mdc-tab-labels"
+    class="icc-drag-tabs"
+    [selectedIndex]="tabsConfig$().selectedTabIndex"
+    animationDuration="0"
+    (selectedIndexChange)="onSelectedIndexChange($event)"
+    [icc-align-tabs]="tabsConfig$().alignTabs"
+  >
+    @for (tab of tabsTabs$(); track $index; let index = $index) {
+      <icc-tab [disabled]="tab.disabled">
+        <ng-template icc-tab-label>
+          <icc-tabs-tab
+            [tabsConfig]="tabsConfig$()"
+            [tabsSetting]="tabsSetting$()"
+            [tabs]="tabsTabs$()"
+            [tab]="tab"
+            [index]="index"
+          >
+          </icc-tabs-tab>
+        </ng-template>
+        @if (index === tabsConfig$().selectedTabIndex && !tab.disabled) {
+          <icc-portal [content]="tab.content!" [context]="tab.context!"></icc-portal>
+        }
+      </icc-tab>
+    }
+  </icc-tab-group>
+}
