--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -1,11 +1,10 @@
-<icc-layout *ngIf="config$ | async as config">
-  <icc-layout-header title="ICC.UI.TITLE.DASHBOARD" [buttons]="buttons" (iccButtonClick)="buttonClick($event)">
-  </icc-layout-header>
-
-  <!--TODO options from ngrx state-->
-  <ng-container *ngIf="setting$ | async as setting">
-    <div *ngIf="tiles$ | async as tiles" cdkDropListGroup>
-      <icc-tiles [config]="config" [setting]="setting" [tiles]="tiles" [options]="options()"> </icc-tiles>
+@if (config$() && setting$() && tiles$()) {
+  <icc-layout>
+    <icc-layout-header title="ICC.UI.TITLE.DASHBOARD" [buttons]="buttons" (iccButtonClick)="buttonClick($event)">
+    </icc-layout-header>
+    <!--TODO options from ngrx state-->
+    <div cdkDropListGroup>
+      <icc-tiles [config]="config$()" [setting]="setting$()" [tiles]="tiles$()" [options]="options()"> </icc-tiles>
     </div>
-  </ng-container>
-</icc-layout>
+  </icc-layout>
+}
