--- a/projects/icc/tabs/src/components/tabs-tab.component.html
+++ b/projects/icc/tabs/src/components/tabs-tab.component.html
@@ -1,25 +1,25 @@
 <span
   cdkDrag
-  [cdkDragDisabled]="dragDisabled(tab)"
+  [cdkDragDisabled]="dragDisabled(tab())"
   cdkDragPreviewClass="icc-drag-tabs-preview"
   cdkDragRootElement=".icc-mdc-tab"
   [iccPopover]="menu"
   [iccPopoverTrigger]="contextMenuTrigger"
   [clickToClose]="true"
   [iccPopoverPosition]="position"
-  >{{ getTabLabel(tab) }}
+  >{{ getTabLabel(tab()) }}
 </span>
 
-@if (closeable(tab)) {
-  <icc-icon class="icc-tab-remove-icon" icon="remove" (click)="closeTab($event, tab)"></icc-icon>
+@if (closeable(tab())) {
+  <icc-icon class="icc-tab-remove-icon" icon="remove" (click)="closeTab($event, tab())"></icc-icon>
 }
 
 <ng-template #menu>
   <icc-menus
     [items]="contextMenu"
     [level]="1"
-    [disabled]="getDisabled(tab)"
-    (iccMenuItemClick)="onContextMenuClicked($event, tab)"
+    [disabled]="getDisabled(tab())"
+    (iccMenuItemClick)="onContextMenuClicked($event, tab())"
   >
   </icc-menus>
 </ng-template>
