--- a/projects/icc/spinner/src/spinner.component.html
+++ b/projects/icc/spinner/src/spinner.component.html
@@ -1,4 +1,4 @@
 <span class="spin-circle"></span>
-@if (message) {
-  <span class="message">{{ message }}</span>
+@if (_message()) {
+  <span class="message">{{ _message() }}</span>
 }
