--- a/projects/icc/portal/src/portal.component.html
+++ b/projects/icc/portal/src/portal.component.html
@@ -1,4 +1,4 @@
 @if (isTextContent) {
-  <div [innerHTML]="content"></div>
+  <div [innerHTML]="content()"></div>
 }
 <ng-template cdkPortalOutlet></ng-template>
