--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,24 +1,20 @@
-@if (gridConfig$() && columnsConfig$()) {
+@if (gridConfig$() && gridSetting$() && columnsConfig$()) {
   <icc-layout>
-    <ng-container *ngIf="gridSetting$ | async as gridSetting">
-      <icc-layout-header
-        *ngIf="!gridConfig$().hideTopbar"
-        [buttons]="buttons"
-        (iccButtonClick)="buttonClick($event, gridConfig$(), gridSetting)"
-      >
+    @if (!gridConfig$().hideTopbar) {
+      <icc-layout-header [buttons]="buttonList()" (iccButtonClick)="buttonClick($event, gridConfig$(), gridSetting$())">
       </icc-layout-header>
+    }
 
-      <icc-grid-view
-        [gridConfig]="gridConfig$()"
-        [gridSetting]="gridSetting"
-        [columns]="columnsConfig$()"
-        [iccSpinner]="gridSetting.loading"
-      >
-      </icc-grid-view>
+    <icc-grid-view
+      [gridConfig]="gridConfig$()"
+      [gridSetting]="gridSetting$()"
+      [columns]="columnsConfig$()"
+      [iccSpinner]="gridSetting$().loading"
+    >
+    </icc-grid-view>
 
-      <icc-grid-footer *ngIf="!gridConfig$().hideGridFooter" [gridSetting]="gridSetting" [gridConfig]="gridConfig$()">
-      </icc-grid-footer>
-    </ng-container>
+    <icc-grid-footer *ngIf="!gridConfig$().hideGridFooter" [gridSetting]="gridSetting$()" [gridConfig]="gridConfig$()">
+    </icc-grid-footer>
   </icc-layout>
 }
 
