--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,8 +1,7 @@
 @if (gridConfig$() && gridSetting$() && columnsConfig$()) {
   <icc-layout>
     @if (!gridConfig$().hideTopbar) {
-      <icc-layout-header [buttons]="buttonList()" (iccButtonClick)="buttonClick($event, gridConfig$(), gridSetting$())">
-      </icc-layout-header>
+      <icc-layout-header [buttons]="buttonList()" (iccButtonClick)="buttonClick($event)"> </icc-layout-header>
     }
 
     <icc-grid-view
@@ -13,33 +12,8 @@
     >
     </icc-grid-view>
 
-    <icc-grid-footer *ngIf="!gridConfig$().hideGridFooter" [gridSetting]="gridSetting$()" [gridConfig]="gridConfig$()">
-    </icc-grid-footer>
+    @if (!gridConfig$().hideGridFooter) {
+      <icc-grid-footer [gridSetting]="gridSetting$()" [gridConfig]="gridConfig$()"> </icc-grid-footer>
+    }
   </icc-layout>
 }
-
-<!--
-<icc-layout>
-  <ng-container *ngIf="gridSetting$ | async as gridSetting">
-    <ng-container *ngIf="columnsConfig$ | async as columns">
-      <icc-layout-header
-        *ngIf="!gridConfig$().hideTopbar"
-        [buttons]="buttons"
-        (iccButtonClick)="buttonClick($event, gridConfig$(), gridSetting)"
-      >
-      </icc-layout-header>
-
-      <icc-grid-view
-        [gridConfig]="gridConfig$()"
-        [gridSetting]="gridSetting"
-        [columns]="columns"
-        [iccSpinner]="gridSetting.loading"
-      >
-      </icc-grid-view>
-
-      <icc-grid-footer *ngIf="!gridConfig$().hideGridFooter" [gridSetting]="gridSetting" [gridConfig]="gridConfig$()">
-      </icc-grid-footer>
-    </ng-container>
-  </ng-container>
-</icc-layout>
--->
