--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -16,6 +16,51 @@
   (scrolledIndexChange)="onScrolledIndexChange($event)"
   (scroll)="onViewportScroll($event)"
 >
+  @if (gridData$()) {
+    <div class="icc-grid-row" *cdkVirtualFor="let record of gridData$(); trackBy: trackByIndex; let index = index">
+      <ng-container *ngIf="rowGroups$ | async as rowGroups">
+        <icc-grid-row-group
+          *ngIf="isRowGroup(index, record)"
+          [gridConfig]="gridConfig()"
+          [gridSetting]="gridSetting()"
+          [rowIndex]="index"
+          [columns]="columns()"
+          [record]="record"
+          (onToggleRowGroup)="onToggleRowGroup(rowGroups)"
+        >
+        </icc-grid-row-group>
+      </ng-container>
+
+      <ng-container *ngIf="rowSelection$ | async as selection">
+        <icc-grid-row
+          *ngIf="!isRowGroup(index, record)"
+          [ngStyle]="{ width: tableWidth + 'px' }"
+          [gridConfig]="gridConfig()"
+          [gridSetting]="gridSetting()"
+          [rowIndex]="index"
+          [columns]="columns()"
+          [columnWidths]="columnWidths"
+          [record]="record"
+          [selected]="selection.isSelected(record)"
+          (click)="rowClick($event, index, record, selection)"
+          (dblclick)="rowDblClick(record)"
+        >
+        </icc-grid-row>
+      </ng-container>
+    </div>
+  }
+</cdk-virtual-scroll-viewport>
+
+<!--
+<cdk-virtual-scroll-viewport
+  [itemSize]="gridConfig().rowHeight"
+  [ngStyle]="{
+    'overflow-x': gridConfig().horizontalScroll ? 'auto' : 'hidden',
+    'overflow-y': gridConfig().virtualScroll || gridConfig().verticalScroll ? 'auto' : 'hidden',
+  }"
+  (scrolledIndexChange)="onScrolledIndexChange($event)"
+  (scroll)="onViewportScroll($event)"
+>
   <ng-container *ngIf="gridData$ | async as gridData">
     <div class="icc-grid-row" *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index">
       <ng-container *ngIf="rowGroups$ | async as rowGroups">
@@ -50,3 +95,4 @@
     </div>
   </ng-container>
 </cdk-virtual-scroll-viewport>
+-->
