--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -9,90 +9,40 @@
 
 <cdk-virtual-scroll-viewport
   [itemSize]="gridConfig().rowHeight"
-  [ngStyle]="{
-    'overflow-x': gridConfig().horizontalScroll ? 'auto' : 'hidden',
-    'overflow-y': gridConfig().virtualScroll || gridConfig().verticalScroll ? 'auto' : 'hidden',
-  }"
+  [style.overflow-x]="gridConfig().horizontalScroll ? 'auto' : 'hidden'"
+  [style.overflow-y]="gridConfig().virtualScroll || gridConfig().verticalScroll ? 'auto' : 'hidden'"
   (scrolledIndexChange)="onScrolledIndexChange($event)"
   (scroll)="onViewportScroll($event)"
 >
   @if (gridData$()) {
     <div class="icc-grid-row" *cdkVirtualFor="let record of gridData$(); trackBy: trackByIndex; let index = index">
-      <ng-container *ngIf="rowGroups$ | async as rowGroups">
+      @if (rowGroups$() && isRowGroup(index, record)) {
         <icc-grid-row-group
-          *ngIf="isRowGroup(index, record)"
           [gridConfig]="gridConfig()"
           [gridSetting]="gridSetting()"
           [rowIndex]="index"
           [columns]="columns()"
           [record]="record"
-          (onToggleRowGroup)="onToggleRowGroup(rowGroups)"
+          (onToggleRowGroup)="onToggleRowGroup(rowGroups$())"
         >
         </icc-grid-row-group>
-      </ng-container>
+      }
 
-      <ng-container *ngIf="rowSelection$ | async as selection">
+      @if (rowSelection$() && !isRowGroup(index, record)) {
         <icc-grid-row
-          *ngIf="!isRowGroup(index, record)"
-          [ngStyle]="{ width: tableWidth + 'px' }"
+          [style.width]="tableWidth + 'px'"
           [gridConfig]="gridConfig()"
           [gridSetting]="gridSetting()"
           [rowIndex]="index"
           [columns]="columns()"
           [columnWidths]="columnWidths"
           [record]="record"
-          [selected]="selection.isSelected(record)"
-          (click)="rowClick($event, index, record, selection)"
+          [selected]="rowSelection$().isSelected(record)"
+          (click)="rowClick($event, index, record)"
           (dblclick)="rowDblClick(record)"
         >
         </icc-grid-row>
-      </ng-container>
+      }
     </div>
   }
 </cdk-virtual-scroll-viewport>
-
-<!--
-<cdk-virtual-scroll-viewport
-  [itemSize]="gridConfig().rowHeight"
-  [ngStyle]="{
-    'overflow-x': gridConfig().horizontalScroll ? 'auto' : 'hidden',
-    'overflow-y': gridConfig().virtualScroll || gridConfig().verticalScroll ? 'auto' : 'hidden',
-  }"
-  (scrolledIndexChange)="onScrolledIndexChange($event)"
-  (scroll)="onViewportScroll($event)"
->
-  <ng-container *ngIf="gridData$ | async as gridData">
-    <div class="icc-grid-row" *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index">
-      <ng-container *ngIf="rowGroups$ | async as rowGroups">
-        <icc-grid-row-group
-          *ngIf="isRowGroup(index, record)"
-          [gridConfig]="gridConfig()"
-          [gridSetting]="gridSetting()"
-          [rowIndex]="index"
-          [columns]="columns()"
-          [record]="record"
-          (onToggleRowGroup)="onToggleRowGroup(rowGroups)"
-        >
-        </icc-grid-row-group>
-      </ng-container>
-
-      <ng-container *ngIf="rowSelection$ | async as selection">
-        <icc-grid-row
-          *ngIf="!isRowGroup(index, record)"
-          [ngStyle]="{ width: tableWidth + 'px' }"
-          [gridConfig]="gridConfig()"
-          [gridSetting]="gridSetting()"
-          [rowIndex]="index"
-          [columns]="columns()"
-          [columnWidths]="columnWidths"
-          [record]="record"
-          [selected]="selection.isSelected(record)"
-          (click)="rowClick($event, index, record, selection, gridData)"
-          (dblclick)="rowDblClick(record)"
-        >
-        </icc-grid-row>
-      </ng-container>
-    </div>
-  </ng-container>
-</cdk-virtual-scroll-viewport>
--->
