--- a/projects/icc/grid/src/components/row-select/row-select.component.html
+++ b/projects/icc/grid/src/components/row-select/row-select.component.html
@@ -1,1 +1,1 @@
-<icc-checkbox [checked]="selected" [indeterminate]="indeterminate"> </icc-checkbox>
+<icc-checkbox [checked]="selected()" [indeterminate]="indeterminate()"> </icc-checkbox>
