--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -1,32 +1,33 @@
-<icc-grid-cell
-  *ngIf="gridConfig.rowSelection"
-  class="icc-grid-cell-row-select"
-  [ngStyle]="{ height: gridConfig.rowHeight + 'px', flex: '0 0 ' + selectColumnWidth }"
->
-  <icc-row-select [selected]="selected"> </icc-row-select>
-</icc-grid-cell>
-
-<ng-container *ngFor="let column of columns; trackBy: trackByIndex; let index = index">
+@if (gridConfig().rowSelection) {
   <icc-grid-cell
-    *ngIf="!column.hidden"
-    [ngStyle]="{
-      height: gridConfig.rowHeight + 'px',
-      flex: '0 0 ' + getColumnWidth(column),
-      'max-width': getColumnWidth(column),
-    }"
+    class="icc-grid-cell-row-select"
+    [style.height]="gridConfig().rowHeight + 'px'"
+    [style.flex]="'0 0 ' + selectColumnWidth"
   >
-    @if (!isCellEditable(column)) {
-      <icc-grid-cell-view [gridConfig]="gridConfig" [rowIndex]="rowIndex" [column]="column" [record]="record">
-      </icc-grid-cell-view>
-    } @else {
-      <icc-grid-cell-edit
-        [gridConfig]="gridConfig"
-        [gridSetting]="gridSetting"
-        [rowIndex]="rowIndex"
-        [column]="column"
-        [record]="record"
-      >
-      </icc-grid-cell-edit>
-    }
+    <icc-row-select [selected]="selected()"> </icc-row-select>
   </icc-grid-cell>
-</ng-container>
+}
+
+@for (column of columns(); track $index; let index = $index) {
+  @if (!column.hidden) {
+    <icc-grid-cell
+      [style.height]="gridConfig().rowHeight + 'px'"
+      [style.flex]="'0 0 ' + getColumnWidth(column)"
+      [style.max-width]="getColumnWidth(column)"
+    >
+      @if (!isCellEditable(column)) {
+        <icc-grid-cell-view [gridConfig]="gridConfig()" [rowIndex]="rowIndex()" [column]="column" [record]="record()">
+        </icc-grid-cell-view>
+      } @else {
+        <icc-grid-cell-edit
+          [gridConfig]="gridConfig()"
+          [gridSetting]="gridSetting()"
+          [rowIndex]="rowIndex()"
+          [column]="column"
+          [record]="record()"
+        >
+        </icc-grid-cell-edit>
+      }
+    </icc-grid-cell>
+  }
+}
