--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -1,13 +1,13 @@
-<div class="grid-header-container" [ngStyle]="{ flex: '0 0 ' + tableWidth + 'px' }">
+<div class="grid-header-container" [style.flex]="'0 0 ' + tableWidth + 'px'">
   <icc-grid-group-header
-    *ngIf="gridConfig.groupHeader"
+    *ngIf="gridConfig().groupHeader"
     [ngStyle]="{
-      left: columnHeaderPosition + 'px',
-      height: gridConfig.headerHeight + 'px',
+      left: columnHeaderPosition() + 'px',
+      height: gridConfig().headerHeight + 'px',
     }"
-    [gridSetting]="gridSetting"
-    [gridConfig]="gridConfig"
-    [columns]="columns"
+    [gridSetting]="gridSetting()"
+    [gridConfig]="gridConfig()"
+    [columns]="columns()"
     [columnWidths]="columnWidths"
     (columnResizing)="onColumnResizing($event)"
     (columnResized)="onColumnResized($event)"
@@ -16,11 +16,11 @@
 
   <icc-grid-header
     [ngStyle]="{
-      left: columnHeaderPosition + 'px',
+      left: columnHeaderPosition() + 'px',
     }"
-    [gridSetting]="gridSetting"
-    [gridConfig]="gridConfig"
-    [columns]="columns"
+    [gridSetting]="gridSetting()"
+    [gridConfig]="gridConfig()"
+    [columns]="columns()"
     [columnWidths]="columnWidths"
     (columnResizing)="onColumnResizing($event)"
     (columnResized)="onColumnResized($event)"
