--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,7 +1,7 @@
 <icc-grid-header-view
   [gridSetting]="gridSetting()"
   [gridConfig]="gridConfig()"
-  [columns]="columns()"
+  [columnConfigs]="columns()"
   [columnHeaderPosition]="columnHeaderPosition"
   (gridColumnWidthsEvent)="gridColumnWidthsEvent($event)"
 >
