--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -1,7 +1,7 @@
 <icc-grid-header-view
   [gridSetting]="gridSetting"
   [gridConfig]="treeConfig"
-  [columns]="columns"
+  [columnConfigs]="columns"
   [columnHeaderPosition]="columnHeaderPosition"
   (gridColumnWidthsEvent)="gridColumnWidthsEvent($event)"
 >
