--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -1,63 +1,62 @@
-<icc-grid-header-item *ngIf="gridConfig.rowSelection" [ngStyle]="{ flex: '0 0 ' + selectColumnWidth }">
-  <ng-container *ngIf="rowSelections$ | async as vm">
-    <icc-row-select
-      *ngIf="gridConfig.multiRowSelection"
-      class="icc-header-row-select"
-      [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"
-      [selected]="vm.allSelected"
-      [indeterminate]="vm.indeterminate"
-      (click)="onToggleSelectAll(vm.allSelected)"
-    >
-    </icc-row-select>
-  </ng-container>
+@if (gridConfig().rowSelection) {
+  <icc-grid-header-item [ngStyle]="{ flex: '0 0 ' + selectColumnWidth }">
+    @if (gridConfig().multiRowSelection) {
+      <icc-row-select
+        class="icc-header-row-select"
+        [ngStyle]="{ height: gridConfig().headerHeight + 'px' }"
+        [selected]="rowSelections$().allSelected"
+        [indeterminate]="rowSelections$().indeterminate"
+        (click)="onToggleSelectAll(rowSelections$().allSelected)"
+      >
+      </icc-row-select>
+    }
+    @if (!gridConfig().multiRowSelection) {
+      <div [ngStyle]="{ height: gridConfig().headerHeight + 'px' }"></div>
+    }
 
-  <div *ngIf="!gridConfig.multiRowSelection" [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"></div>
-
-  <div
-    *ngIf="gridConfig.columnFilter"
-    class="icc-header-no-filter-border"
-    [ngStyle]="{ height: filterRowHeight }"
-  ></div>
-</icc-grid-header-item>
-
-<ng-container *ngFor="let column of columns; trackBy: trackByIndex; let index = index">
-  <icc-grid-header-item
-    *ngIf="!column.hidden"
-    [ngStyle]="{ flex: '0 0 ' + getColumnWidth(column), 'max-width': getColumnWidth(column) }"
-    [column]="column"
-    [columns]="columns"
-    [gridConfig]="gridConfig"
-    [gridSetting]="gridSetting"
-    (columnResizing)="columnResizing.emit($event)"
-    (columnResized)="columnResized.emit($event)"
-    cdkDrag
-    [cdkDragDisabled]="dragDisabled(column)"
-    iccColumnResize
-  >
-    <icc-grid-header-cell
-      [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"
-      [column]="column"
-      [gridSetting]="gridSetting"
-      [gridConfig]="gridConfig"
-      (columnMenuClick)="onColumnMenuClick($event)"
-      cdkDragHandle
-    >
-    </icc-grid-header-cell>
-
-    <icc-column-filter
-      *ngIf="gridConfig.columnFilter && column.filterField !== false"
-      [gridSetting]="gridSetting"
-      [gridConfig]="gridConfig"
-      [column]="column"
-    >
-    </icc-column-filter>
-    <div
-      class="icc-header-no-filter-border"
-      [ngStyle]="{ height: filterRowHeight }"
-      *ngIf="gridConfig.columnFilter && column.filterField === false"
-    ></div>
-
-    <div class="drag-placeholder" *cdkDragPlaceholder></div>
-    <div *ngIf="gridConfig.columnResize" class="icc-grid-column-resize-action" iccColumnResizeTrigger></div>
+    @if (gridConfig().columnFilter) {
+      <div class="icc-header-no-filter-border" [ngStyle]="{ height: filterRowHeight }"></div>
+    }
   </icc-grid-header-item>
-</ng-container>
+}
+
+@for (column of columns(); track $index; let index = $index) {
+  @if (!column.hidden) {
+    <icc-grid-header-item
+      [ngStyle]="{ flex: '0 0 ' + getColumnWidth(column), 'max-width': getColumnWidth(column) }"
+      [column]="column"
+      [columns]="columns()"
+      [gridConfig]="gridConfig()"
+      [gridSetting]="gridSetting()"
+      (columnResizing)="columnResizing.emit($event)"
+      (columnResized)="columnResized.emit($event)"
+      cdkDrag
+      [cdkDragDisabled]="dragDisabled(column)"
+      iccColumnResize
+    >
+      <icc-grid-header-cell
+        [ngStyle]="{ height: gridConfig().headerHeight + 'px' }"
+        [column]="column"
+        [gridSetting]="gridSetting()"
+        [gridConfig]="gridConfig()"
+        (columnMenuClick)="onColumnMenuClick($event)"
+        cdkDragHandle
+      >
+      </icc-grid-header-cell>
+
+      @if (gridConfig().columnFilter && column.filterField !== false) {
+        <icc-column-filter [gridSetting]="gridSetting()" [gridConfig]="gridConfig()" [column]="column">
+        </icc-column-filter>
+      }
+
+      @if (gridConfig().columnFilter && column.filterField === false) {
+        <div class="icc-header-no-filter-border" [ngStyle]="{ height: filterRowHeight }"></div>
+      }
+
+      <div class="drag-placeholder" *cdkDragPlaceholder></div>
+      @if (gridConfig().columnResize) {
+        <div class="icc-grid-column-resize-action" iccColumnResizeTrigger></div>
+      }
+    </icc-grid-header-item>
+  }
+}
