--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -1,7 +1,7 @@
 <div class="grid-header-cell" (click)="headCellClick($event)">
   <div class="grid-header-cell-title">{{ title | translate }}</div>
 
-  @if (gridConfig.columnSort && isSortField) {
+  @if (gridConfig().columnSort && isSortField) {
     @if (sortDir === "asc") {
       <div class="grid-header-cell-sort"><icc-icon config="caret-up"></icc-icon></div>
     }
@@ -10,7 +10,7 @@
     }
   }
 
-  @if (gridConfig.columnMenu) {
+  @if (gridConfig().columnMenu) {
     <div class="grid-header-cell-menu" (click)="onClickColumnMenu($event)">
       <icc-icon config="ellipsis-v"></icc-icon>
     </div>
