--- a/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.html
@@ -1,19 +1,23 @@
-<icc-grid-header-item *ngIf="gridConfig.rowSelection" [ngStyle]="{ flex: '0 0 ' + rowSelectionCellWidth + 'px' }">
-</icc-grid-header-item>
+@if (gridConfig().rowSelection) {
+  <icc-grid-header-item [style.flex]="'0 0 ' + rowSelectionCellWidth + 'px'"></icc-grid-header-item>
+}
 
-<ng-container *ngFor="let header of groupHeaderColumns; trackBy: trackByIndex; let index = index">
+@for (header of groupHeaderColumns; track $index; let index = $index) {
   <icc-grid-header-item
-    [ngStyle]="{ flex: '0 0 ' + getHeaderWidth(header), 'max-width': getHeaderWidth(header) }"
+    [style.flex]="'0 0 ' + getHeaderWidth(header)"
+    [style.max-width]="getHeaderWidth(header)"
     [groupHeader]="true"
     [column]="getColumn(header)"
-    [columns]="columns"
-    [gridConfig]="gridConfig"
-    [gridSetting]="gridSetting"
+    [columns]="columns()"
+    [gridConfig]="gridConfig()"
+    [gridSetting]="gridSetting()"
     (columnResizing)="columnResizing.emit($event)"
     (columnResized)="columnResized.emit($event)"
     iccColumnResize
   >
     {{ header.title }}
-    <div *ngIf="gridConfig.columnResize" class="icc-grid-column-resize-action" iccColumnResizeTrigger></div>
+    @if (gridConfig().columnResize) {
+      <div class="icc-grid-column-resize-action" iccColumnResizeTrigger></div>
+    }
   </icc-grid-header-item>
-</ng-container>
+}
